[tool.poetry]
name = "ppuri"
version = "0.2.0"
description = "A pyparsing based URI parser/scanner"
authors = ["Simon Kennedy <sffjunkie+code@gmail.com>"]
license = "Apache-2.0"
readme = "ReadMe.md"

packages = [
    { include = "ppuri", from = "src" },
    { include = "ppuri/py.typed", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.10"
pyparsing = "^3.0.9"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
rich = "^12.5.1"

[tool.pytest.ini_options]
pythonpath = [
    "src"
]
norecursedirs = [".git", "build", ".venv"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
